2014-06-16  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.c (decide_alg): Correctly handle
	maximum size of stringop algorithm.

2014-06-16  Yury Gribov  <y.gribov@samsung.com>

	* asan.c (build_check_stmt): Fix maybe-uninitialized warning.

2014-06-16  Vladimir Makarov  <vmakarov@redhat.com>

	PR rtl-optimization/61522
	* lra-assigns.c (assign_by_spills): Check null targetm.spill_class.

2014-06-16  Jan Hubicka  <hubicka@ucw.cz>

	Revert:
	* symtab.c (symtab_node::reset_section): New method.
	* cgraph.c (cgraph_node_cannot_be_local_p_1): Accept non-local
	for localization.
	* cgraph.h (reset_section): Declare.
	* ipa-inline-analysis.c (do_estimate_growth): Check for comdat groups;
	do not consider comdat locals.
	* cgraphclones.c (set_new_clone_decl_and_node_flags): Get section
	for new symbol.
	* ipa-visiblity.c (cgraph_externally_visible_p): Cleanup.
	(update_visibility_by_resolution_info): Consider UNDEF; fix checking;
	reset sections of symbols dragged out of the comdats.
	(function_and_variable_visibility): Reset sections of localized symbols.

2014-06-16  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/61482
	* tree-vrp.c (adjust_range_with_scev): Avoid setting of
	[-INF(OVF), +INF(OVF)] range.

2014-06-16  Ganesh Gopalasubramanian <Ganesh.Gopalasubramanian@amd.com>

	* config/i386/i386.c (ix86_expand_sse2_mulvxdi3): Issue
	instructions "vpmuludq" and "vpaddq" instead of "vpmacsdql" for
	handling 32-bit multiplication.

2014-06-16  Chung-Lin Tang  <cltang@codesourcery.com>

	PR middle-end/61430
	* lra-lives.c (process_bb_lives): Skip creating copy during
	insn scan when src/dest has constrained to same regno.

2014-06-15  Jan Hubicka  <hubicka@ucw.cz>

	* tree-vect-data-refs.c (vect_can_force_dr_alignment_p): Check again
	DECL_IN_CONSTANT_POOL and TREE_ASM_WRITTEN.

2014-06-16  Yury Gribov  <y.gribov@samsung.com>

	* asan.c (check_func): New function.
	(maybe_create_ssa_name): Likewise.
	(build_check_stmt_with_calls): Likewise.